<resources>
    <string name="app_name">MMM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">MMM</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for Movies</string>
    <string name="search_results">Search Results: %s</string>
    <string name="movie_details">Movie Details</string>

    <string name="previous_search_query">Previous Search Query: %s</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description</string>
    <string name="search_query">Search Query</string>
    <string name="todo">...</string>
    <string name="trending_horror_movies">Trending Horror Movies</string>
    <string name="trending_drama_movies">Trending Drama Movies</string>
    <string name="trending_action_movies">Trending Action Movies</string>
    <string name="trending_comedy_movies">Trending Comedy Movies</string>
    <string name="trending_award_winning_movies">Trending Award Winning Movies</string>
    <string name="trending_adventure_movies">Trending Adventure Movies</string>
    <string name="trending_animation_movies">Trending Animation Movies</string>
    <string name="trending_crime_movies">Trending Crime Movies</string>
    <string name="trending_documentary_movies">Trending Documentary Movies</string>
    <string name="trending_family_movies">Trending Family Movies</string>
    <string name="trending_fantasy_movies">Trending Fantasy Movies</string>
    <string name="trending_history_movies">Trending History Movies</string>
    <string name="trending_music_movies">Trending Music Movies</string>
    <string name="trending_mystery_movies">Trending Mystery Movies</string>
    <string name="trending_romance_movies">Trending Romance Movies</string>
    <string name="trending_science_fiction_movies">Trending Science Fiction Movies</string>
    <string name="trending_tv_movies">Trending TV Movies</string>
    <string name="trending_thriller_movies">Trending Thriller Movies</string>
    <string name="trending_war_movies">Trending War Movies</string>
    <string name="trending_western_movies">Trending Western Movies</string>



    <string name="movie_title_descriptor">%s</string>
    <string name="movie_poster">Movie poster</string>
    <string name="cast_format">Cast: %s</string>
    <string name="vote_average_format">Rating: %1$.1f/10</string>
    <string name="runtime">%dh %dm</string>
    <string name="runtime_nohrs">%dm</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="cast_member_image">Cast member image</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="view_details" />
    <string name="search_history" />
    <string name="search_title" />
    <string name="no_history_found">You don\'t currently have a search history, movies will be added here as you browse.</string>
    <string name="search_history_title">Recently viewed</string>
    <string name="suggested">Similar films</string>
    <string name="TvOverviewPlaceholder">Overview Placeholder</string>


    <string name="filter">Filter</string>
    <string name="adventure">Adventure</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="thriller">Thriller</string>
    <string name="horror">Horror</string>
    <string name="romantic_comedy">Romantic Comedy</string>
    <string name="musical">Musical</string>
    <string name="documentary">Documentary</string>
    <string name="romance">Romance</string>
    <string name="trending_comedy_tv_shows">Trending Comedy TV Shows</string>
    <string name="no_overview_string">There is no overview for this series currently!</string>
    <string name="filter_icon_description">filter_icon_description</string>
</resources>