<?xml version="1.0" encoding="utf-8"?>





<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search_results"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/ToolbarTheme"
        app:titleTextColor="@android:color/white"
        android:elevation="4dp" />


    <ListView
        android:id="@+id/search_history_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_search_results"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="Searching For TV Shows"
                android:textOn="Searching For Movies"
                android:checked="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:switchMinWidth="64dp"
                android:switchPadding="16dp"
                android:thumbTint="@color/purple_200"
                android:trackTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/query_search_results"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:gravity="end"
                tools:ignore="UseSwitchCompatOrMaterialXml" />




            <TextView
                android:id="@+id/noSearchHistoryTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_history_found"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/queryTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone" />


        <TextView
            android:id="@+id/searchHistoryTitleTextView"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_history_title"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/slider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/query_search_results"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_results"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/searchHistoryTitleTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/queryTextView"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_query"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/query_search_results"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchHistoryTitleTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


