<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Your other views -->


            <!-- Title For Horror Movies -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trending Horror Movies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <!-- Detail text For Horror Movies -->
            <TextView
                android:id="@+id/movieDetailsTextViewHorror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Movie Details"
                android:textSize="16sp"
                android:gravity="center"

                android:paddingTop="64dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:visibility="gone"/>
            <!-- Horizontal ScrollView For Images -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHorror"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />





            <!-- Title For Drama Movies -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trending Drama Movies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:paddingTop="64dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <!-- Detail text For Drama Movies -->

            <!-- Title For Horror Movies -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_horror_movies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <!-- Detail text For Horror Movies -->
            <TextView
                android:id="@+id/movieDetailsTextViewHorror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details"
                android:textSize="16sp"
                android:gravity="center"

                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:visibility="gone"/>
            <!-- Horizontal ScrollView For Images -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHorror"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <!-- Title For Drama Movies -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_drama_movies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <!-- Detail text For Drama Movies -->
            <TextView
                android:id="@+id/movieDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Movie Details"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:visibility="gone"/>
            <!-- Horizontal ScrollView For Images -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDrama"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <!-- Title For Action Movies -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_action_movies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <!-- Detail text For Action Movies -->
            <TextView
                android:id="@+id/movieDetailsTextViewAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:visibility="gone"/>
            <!-- Horizontal ScrollView For Images -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAction"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />



            <!-- Title For Comedy Movies -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_comedy_movies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <!-- Detail text For Action Movies -->
            <TextView
                android:id="@+id/movieDetailsTextViewComedy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:visibility="gone"/>
            <!-- Horizontal ScrollView For Images -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComedy"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <!-- Title For Award Winning Movies -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_award_winning_movies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:paddingTop="14dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <!-- Detail text For Award Winning Movies -->
            <TextView
                android:id="@+id/movieDetailsTextViewAwards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details"
                android:textSize="16sp"
                android:gravity="center"

                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:visibility="gone"/>
            <!-- Horizontal ScrollView For Images -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAward"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- add other views -->

        </LinearLayout>
    </ScrollView>

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerInParent="true"-->
    <!--        android:src="@drawable/placeholder_image" />-->

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />



</androidx.drawerlayout.widget.DrawerLayout>